# pipelinepulse

./: LICENSE  README.md  config.yaml  pyproject.toml
pipelinepulse/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
pipelinepulse/.github/workflows/: daily-digest.yml
pipelinepulse/docs/: generate_architecture.py
pipelinepulse/src/pipelinepulse/: notion_writer.py  salesforce_client.py
pipelinepulse/tests/: test_ai_insights.py  test_scoring.py
src/pipelinepulse/: __init__.py  ai_insights.py  config.py  main.py  notion_writer.py  scoring.py
tests/fixtures/: mock_opportunities.json
