[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinepulse"
version = "0.1.0"
description = "AI sales-ops automation: Salesforce -> deterministic scoring -> Claude -> Notion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "simple-salesforce>=1.12.6",
    "anthropic>=0.39.0",
    "notion-client>=2.2.1",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
pipelinepulse = "pipelinepulse.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
